<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:background="@color/colorAccent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">


            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/office"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/office"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/office" />

            <TextView
                android:id="@+id/party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/party"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="176dp"
                android:layout_height="172dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:onClick="openPhotoActivity"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/party"
                app:srcCompat="@drawable/missingimage"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/Address"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton"
                tools:text="Address:" />

            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="20dp"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:textColorLink="#ffffff"
                android:text="@string/address"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toRightOf="@+id/textView9"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/PhoneText"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address"
                tools:text="Phone:" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="15dp"
                android:textColorLink="#ffffff"
               android:text="@string/Phone"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/textView11"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/EmailText"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                tools:text="Email:" />

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textColorLink="#ffffff"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/textView13"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/WebsiteText"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                tools:text="Website:" />

            <TextView
                android:id="@+id/url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:inputType="textMultiLine"
                android:textColorLink="#ffffff"
                android:text="@string/Website"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/textView15"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="62dp"
                android:layout_height="51dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="@+id/imageButton4"
                app:layout_constraintTop_toBottomOf="@+id/url"
                app:srcCompat="@mipmap/ic_twitter" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="62dp"
                android:layout_height="51dp"
                android:layout_marginLeft="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:srcCompat="@mipmap/ic_youtube"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/url" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="66dp"
                android:layout_height="51dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="@+id/imageButton3"
                app:layout_constraintTop_toBottomOf="@+id/url"
                app:srcCompat="@mipmap/ic_fb" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="59dp"
                android:layout_height="51dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="9dp"
                app:layout_constraintLeft_toRightOf="@+id/imageButton6"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/url"
                app:srcCompat="@mipmap/ic_gplus" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>